# real-estate-am

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
real_estate/: __init__.py  app.py  config.py  main.py  webapp.py
real_estate/db/: __init__.py  config.py  models.py
real_estate/filters/: __init__.py  enums.py  ranges.py
real_estate/parser/: __init__.py  builder.py  config.py  enums.py  ranges.py
real_estate/services/: __init__.py  apartments.py  api.py  builder.py  polygons.py  scheduler.py  tools.py
real_estate/static/css/: style.css
real_estate/static/js/: balloon.js  map.js  polygon.js
real_estate/templates/: filter.html  index.html  map.html
