[project]
name = "real-estate-am"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker>=1.9.0",
    "bs4>=0.0.2",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rollbar>=1.3.0",
]

[dependency-groups]
dev = [
    "cloudscraper>=1.2.71",
    "ruff>=0.15.12",
]
