[project]
name = "real-estate-am"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "apscheduler>=3.11.2",
    "cloudscraper>=1.2.71",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
]
web = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
]
